--- a/Labs/T3/L08/E05.md
+++ b/Labs/T3/L08/E05.md
@@ -30,4 +30,4 @@ Show that the two versions of make-withdraw create objects with the same behavio
 structures differ for the two versions?
 
 --- 
-[!Environment Diagram]("./env_1.png")
+[!Environment Diagram]("https://github.com/albamr09/CS61A/blob/main/Labs/T3/L08/env_1.png")
