--- a/Labs/T3/L08/E06.md
+++ b/Labs/T3/L08/E06.md
@@ -54,7 +54,7 @@ Which parts of the environment structure are shared between acc and acc2?
 
 ---
 
-![Environment Diagram]("https://github.com/albamr09/CS61A/blob/main/Labs/T3/L08/env.png")
+![Environment Diagram](/Labs/T3/L08/env.png)
 
 The local state of `acc` is stored in the frame `E1` whereas the local state of `acc2` is stored in the frame `E2`.
 
