[Labs] Add envdraw explanation to L08

--- a/Labs/T3/L08/E05.md
+++ b/Labs/T3/L08/E05.md
@@ -31,3 +31,35 @@ structures differ for the two versions?
 
 --- 
 ![Environment Diagram](/Labs/T3/L08/env_1.png)
+
+To see on `EnvDraw`, install `STk`, follow the [instructions](/docs/STk.md), even if you have already installed the `.deb` package, because sometimes and for no reason the OS removes the library.
+
+If you have everything installed and ready, head to where you have your `envdraw` executable and run from the terminal:
+
+```bash
+$ ./envdraw
+STk > (envdraw)
+```
+
+Now an extra window appears, where the environment will be drawn while you run declaration in the interpreter, so if you run:
+
+```scheme
+STk > (define (make-withdraw initial-amount)
+  (let ((balance initial-amount))
+    (lambda (amount)
+      (if (>= balance amount)
+        (begin 
+          (set! balance (- balance amount))
+          balance
+        )
+        "Insufficient funds"
+      )
+    )
+  )
+)
+STk > (define W1 (make-withdraw 100))
+STk > (W1 50)
+STk > (define W2 (make-withdraw 100))
+```
+
+you get the final result.
