--- a/Labs/T3/L08/E06.md
+++ b/Labs/T3/L08/E06.md
@@ -60,3 +60,5 @@ The local state of `acc` is stored in the frame `E1` whereas the local state of 
 
 Both `acc` and `acc2` have as their enclosing environment the global environment.
 
+To see on `EnvDraw`, check out the last paragraphs of [E05](/Labs/T3/L08/E05.md)
+
