--- a/Projects/04/schyton/changelog.txt
+++ b/Projects/04/schyton/changelog.txt
@@ -1,6 +1,17 @@
-# version=1.1
+# version=1.3
 
 
+#######################  
+# v1.3 - 03/06/2022
+# 
+### 
+# For Question A5.
+# - Modified eval.scm
+#		- Modified handle-infix to handle and/or infix operators.
+# For Question B5.
+# - Modified eval.scm
+#		- Modified handle-infix to handle in and not in infix operators.
+#
 #######################  
 # v1.2 - 02/06/2022
 # 
